# interpolation

./: .dir-locals.el  CMakeLists.txt
src/: interpolationtypes.h  main.cpp  observer.h  plotcontrolinterface.h  plotcontrolinterpolation.cpp  plotcontrolinterpolation.h  plotmodelinterface.h  plotmodelinterpolation.cpp  plotmodelinterpolation.h  plotviewinterpolation.cpp  plotviewinterpolation.h
